Revert "Merge branch 'fb-ECA-10283-Remove-resource-leakages-and-other-compiler-warnings' into 'main'"
This reverts merge request !63