@@ -27,6 +27,8 @@ import org.junit.Test;
 
 /**
  * Tests EjbcaWS helper methods.
+ * 
+ * @version $Id: EjbcaWSHelperMethodsTest.java 22930 2016-03-04 14:02:35Z tarmo_r_helmes $
  */
 public class EjbcaWSHelperMethodsTest {
 
@@ -46,9 +48,9 @@ public class EjbcaWSHelperMethodsTest {
         metadata.add(new KeyValuePair("certificateprofileid", certProfileId));
         
         CertRevocationDto result = ejbcaWS.parseRevocationMetadata(certRevocationDto, metadata);
-        assertEquals(Integer.valueOf(reason), result.getReason());
+        assertEquals(new Integer(reason), result.getReason());
         assertEquals(DatatypeConverter.parseDateTime(date).getTime(), result.getRevocationDate());
-        assertEquals(Integer.valueOf(certProfileId), result.getCertificateProfileId());
+        assertEquals(new Integer(certProfileId), result.getCertificateProfileId());
     }
 
     @Test
